# hermit

./: CMakeLists.txt  config.hpp.in  decl_test.cpp  mpreal.cpp
include/: CMakeLists.txt
include/hermit/: byte_stream_iterator.hpp  chopped_iterator.hpp  delayed.hpp  flatten_iterator.hpp  has_function.hpp  has_function_xxx.hpp  has_member_accessible_xxx.hpp  has_member_function_xxx.hpp  has_member_type_xxx.hpp  has_member_variable_xxx.hpp  has_member_xxx.hpp  has_memfun_xxx.hpp  has_static_member_function_xxx.hpp  has_type_xxx.hpp  http_cache_control.hpp  http_pragma.hpp  http_transfer_encoding.hpp  int128_t.hpp  integer.hpp  ip.hpp  is_range.hpp  iterator_traits.hpp  json.hpp  messagepack.hpp  microxml.hpp  mpint.hpp  none_type.hpp  priority.hpp  range_traits.hpp  s_expr.hpp  sampler.hpp  scheduler.hpp  simd.hpp  task_remapper.hpp  to_member_function.hpp  uri.hpp  utf8.hpp
include/hermit/format/: json.hpp  messagepack.hpp
include/hermit/format/convert/: json2messagepack.hpp  json2microxml.hpp  messagepack2json.hpp  microxml2json.hpp
include/hermit/format/read/: base64.hpp  ipv4.hpp  ipv6.hpp  json.hpp  messagepack.hpp  uri.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/hermit/format/write/: base64.hpp  ipv4.hpp  ipv6.hpp  json.hpp  messagepack.hpp  uri.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/hermit/spirit/: base64.hpp  json.hpp  messagepack.hpp  utf16.hpp  utf8.hpp
include/hermit/spirit/karma/: base64.hpp  http_cache_control.hpp  http_connection.hpp  http_date.hpp  http_pragma.hpp  http_trailer.hpp  ipv4.hpp  ipv6.hpp  json.hpp  messagepack.hpp  microxml.hpp  rfc1123_date.hpp  rfc850_date.hpp  uri.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/hermit/spirit/qi/: asctime.hpp  base64.hpp  common.hpp  http_cache_control.hpp  http_connection.hpp  http_date.hpp  http_pragma.hpp  http_trailer.hpp  http_transfer_encoding.hpp  ipv4.hpp  ipv6.hpp  json.hpp  messagepack.hpp  microxml.hpp  rfc1123_date.hpp  rfc850_date.hpp  uri.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/hermit/stream/: native_pack.hpp  native_pack_operator.hpp  native_pack_size.hpp  smallest_pot.hpp
include/hermit/stream/base/: native_pack.hpp  native_pack_operator.hpp  native_pack_size.hpp
include/hermit/stream/clang/: native_pack.hpp  native_pack_operator.hpp  native_pack_size.hpp
include/hermit/stream/clang/avx/: native_pack_size.hpp
include/hermit/stream/clang/avx2/: native_pack_size.hpp
include/hermit/stream/clang/mmx/: native_pack_size.hpp
include/hermit/stream/clang/sse/: native_pack_size.hpp
include/hermit/stream/clang/sse2/: native_pack_size.hpp
include/hermit/stream/clang/sse3/: native_pack_size.hpp
include/hermit/stream/clang/sse4/: native_pack_size.hpp
include/hermit/stream/gcc/: native_pack.hpp  native_pack_operator.hpp  native_pack_size.hpp
include/hermit/stream/gcc/avx/: native_pack_size.hpp
include/hermit/stream/gcc/avx2/: native_pack_size.hpp
include/hermit/stream/gcc/mmx/: native_pack_size.hpp
include/hermit/stream/gcc/sse/: native_pack_size.hpp
include/hermit/stream/gcc/sse2/: native_pack_operator.hpp  native_pack_size.hpp
include/hermit/stream/gcc/sse3/: native_pack_size.hpp
include/hermit/stream/gcc/sse4/: native_pack_size.hpp
src/: CMakeLists.txt  base64_sample.cpp  byte_stream_iterator_sample.cpp  chopped_iterator_sample.cpp  date_time_sample.cpp  delayed_sample.cpp  exr.cpp  flatten_iterator_sample.cpp  has_memfun_xxx_sample.cpp  http_cache_control.cpp  http_connection.cpp  http_pragma.cpp  http_trailer.cpp  http_transfer_encoding.cpp  ip.cpp  ip_sample.cpp  ipv4_sample.cpp  ipv6_sample.cpp  json_sample.cpp  messagepack_sample.cpp  messagepack_sample2.cpp  microxml_sample.cpp  mpint.cpp  range_traits_sample.cpp  s_expr_sample.cpp  sample.cpp  scheduler_sample.cpp  simd_sample.cpp  stream.cpp  stream2.cpp  task_remapper_poll_sample.cpp  task_remapper_sample.cpp  uri_sample.cpp  utf16_sample.cpp  utf32_sample.cpp  utf8_sample.cpp
