
ADD_LIBRARY( hermit_mpint SHARED mpint.cpp )
target_link_libraries( hermit_mpint ${TomMath_LIBRARY} )
ADD_EXECUTABLE( ip_sample ip_sample.cpp )
ADD_EXECUTABLE( ipv4_sample ipv4_sample.cpp )
ADD_EXECUTABLE( ipv6_sample ipv6_sample.cpp )
ADD_EXECUTABLE( uri_sample uri_sample.cpp )
target_link_libraries( uri_sample ${Boost_LIBRARIES} )
ADD_EXECUTABLE( simd_sample simd_sample.cpp )
ADD_EXECUTABLE( has_memfun_xxx_sample has_memfun_xxx_sample.cpp )
ADD_EXECUTABLE( range_traits_sample range_traits_sample.cpp )
ADD_EXECUTABLE( s_expr_sample s_expr_sample.cpp )
ADD_EXECUTABLE( json_sample json_sample.cpp )
ADD_EXECUTABLE( messagepack_sample messagepack_sample.cpp )
ADD_EXECUTABLE( messagepack_sample2 messagepack_sample2.cpp )
ADD_EXECUTABLE( utf8_sample utf8_sample.cpp )
ADD_EXECUTABLE( utf16_sample utf16_sample.cpp )
ADD_EXECUTABLE( utf32_sample utf32_sample.cpp )
ADD_EXECUTABLE( base64_sample base64_sample.cpp )
ADD_EXECUTABLE( delayed_sample delayed_sample.cpp )
target_link_libraries( delayed_sample ${Boost_LIBRARIES} )
ADD_EXECUTABLE( task_remapper_sample task_remapper_sample.cpp )
target_link_libraries( task_remapper_sample ${Boost_LIBRARIES} )
ADD_EXECUTABLE( task_remapper_poll_sample task_remapper_poll_sample.cpp )
target_link_libraries( task_remapper_poll_sample ${Boost_LIBRARIES} )
ADD_EXECUTABLE( exr exr.cpp )
target_link_libraries( exr ${Boost_LIBRARIES} ${OPENEXR_LIBRARIES} )

install( TARGETS hermit_mpint
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  )
